# video-forge

./: ATTRIBUTION.md  HOUSEHOLD.md  HOUSEHOLD_README.md  LICENSE  README.md  SKILL.md  household-requirements.txt  install.md  pyproject.toml
docs/: PHASE2_UI.md
references/: brand-lexicon.yaml
video_forge/: __init__.py  api.py  config.py  observability.py  references.py
video_forge/demo/: __init__.py  __main__.py  _ffprobe.py  align.py  assemble.py  assertions.py  loudnorm.py  orchestrator.py  preflight.py  scene_planner.py  script.py  walkthrough.py
video_forge/tts/: __init__.py  catalog.py  elevenlabs.py  gemini.py  openai.py  profiles.py  synth.py  voices_elevenlabs.py  voices_gemini.py  voices_openai.py
